{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 199,
  "lineage": "1cbcd949-7863-0a50-5592-994b5717698d",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01607054-u-vm1-nic-1",
            "internal_domain_name_suffix": "suf3m1lf0mwehmvegebjpsd1yf.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01607054-u-vm1-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-u-vm1-pip-2",
                "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadaeast",
            "name": "n01607054-u-vm1-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContantEmail": "abha.kamble@humber.ca",
              "Environment": "LAB",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux-rg",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01607054-u-vm1-nic-2",
            "internal_domain_name_suffix": "suf3m1lf0mwehmvegebjpsd1yf.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01607054-u-vm1-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-u-vm1-pip-1",
                "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadaeast",
            "name": "n01607054-u-vm1-nic-2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContantEmail": "abha.kamble@humber.ca",
              "Environment": "LAB",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux-rg",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01607054-u-vm11",
            "fqdn": "n01607054-u-vm11.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-u-vm1-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.136.78",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "n01607054-u-vm1-pip-1",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContantEmail": "abha.kamble@humber.ca",
              "Environment": "LAB",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01607054-u-vm12",
            "fqdn": "n01607054-u-vm12.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-u-vm1-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.136.76",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "n01607054-u-vm1-pip-2",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContantEmail": "abha.kamble@humber.ca",
              "Environment": "LAB",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadaeast",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadaeast",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg1",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg2asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6dd60b95-d365-432c-b2a4-310297c87bc5",
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadaeast",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01607054-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/n01607054-w-vm1-nic",
            "internal_domain_name_suffix": "suf3m1lf0mwehmvegebjpsd1yf.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01607054-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-w-vm1-pip",
                "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadaeast",
            "name": "n01607054-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "windows-rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg",
            "module.resource_group.azurerm_resource_group.windows-rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        },
        {
          "index_key": "n01607054-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/n01607054-w-vm2-nic",
            "internal_domain_name_suffix": "suf3m1lf0mwehmvegebjpsd1yf.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01607054-w-vm2-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-w-vm2-pip",
                "subnet_id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadaeast",
            "name": "n01607054-w-vm2-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "windows-rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-rg",
            "module.resource_group.azurerm_resource_group.windows-rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01607054-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01607054-w-vm1",
            "fqdn": "n01607054-w-vm1.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.136.133",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "n01607054-w-vm1-pip",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-rg"
          ]
        },
        {
          "index_key": "n01607054-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01607054-w-vm2",
            "fqdn": "n01607054-w-vm2.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/49e01ede-4bd5-4cb2-b1ae-56323f9463de/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01607054-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.136.172",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "n01607054-w-vm2-pip",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-rg"
          ]
        }
      ]
    }
  ]
}